--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,89 @@
-.App {
-  text-align: center;
+html,
+body {
+   height: 100%;
+   margin: 0;
+   background-color: #f8f9fa;
+}
+.map-page {
+   display: flex;
+   flex-direction: column;
+   height: 100vh;
+   background-color: #f8f9fa;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header-container {
+   margin-bottom: 10px;
+   background-color: #c80815;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.custom-container {
+   background-color: #c80815;
+   border-radius: 10px;
+   max-width: 500px;
+   margin: auto;
+   padding: 15px;
+   color: white;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.map-page-content {
+   display: flex;
+   flex: 1;
 }
 
-.App-link {
-  color: #61dafb;
+.sidebar {
+   width: 300px;
+   margin-top: 30px;
+   margin-right: 30px;
+   background-color: #f8f9fa;
+   padding: 15px;
+   overflow-y: auto;
+   height: calc(100vh - 240px);
+   box-sizing: border-box;
+   order: 2;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.sidebar .btn {
+   width: 100%;
+   box-sizing: border-box;
+   margin: 5px 0;
+}
+
+.map-container {
+   flex: 1;
+   position: relative;
+   margin: 10px;
+   margin-left: 30px;
+   height: calc(100vh - 200px);
+   padding: 20px;
+   box-sizing: border-box;
+}
+
+.map {
+   height: 100%;
+   width: 100%;
+   border: 1px solid #c80815;
+   box-sizing: border-box;
+}
+
+.esri-popup {
+   position: absolute !important;
+   background-color: white !important;
+   color: black !important;
+   border-radius: 8px;
+   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+   padding: 10px;
+   overflow: hidden;
+   width: 500px;
+   max-width: 100%;
+}
+
+.search-button {
+   background-color: #ffc80a !important;
+   color: black !important;
+   border: black !important;
+}
+
+.custom-input {
+   border: 1px solid #ffc80a !important;
+   border-radius: 0.25rem;
 }
